# Helm

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  package.json  run.cmd
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_watch.rs  hook_server.rs  main.rs  mobile.rs
ui/: app.js  index.html  styles.css
