[package]
name = "helm"
version = "0.5.0"
description = "Helm — native Windows dashboard terminal for AI coding agent CLIs"
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
sysinfo = "0.32"
notify = "6"
png = "0.17"

[profile.release]
opt-level = "s"
lto = true
strip = true
